--- a/cuidados.html
+++ b/cuidados.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -15,13 +16,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
                     <div class="col-2">
                         <a class="navbar-brand" href="#">
-                            <img src="assets/img/black-cat.jpg" width="50" alt="logo-pagina">
+                            <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                         </a>
                     </div>
-
                     <div class="col-8">
                         <ul class="navbar-nav d-flex justify-content-center align-items-center">
                             <li class="nav-item">
@@ -56,22 +55,22 @@
         <div class="carousel-item active d-item">
             <img src="assets/img/gato-veterinario.jpg" class="d-block w-100 d-img" alt="slider1">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
-                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
+                <h1 class="display-1 fw-bolder text-uppercase s-title">Cuidados Felinos</h1>
+                <p class="mt-3  text-uppercase s-texto">Tu Guía para un Gato Saludable</p>
             </div>
         </div>
         <div class="carousel-item  d-item">
             <img src="assets/img/gato-arenero.jpg" class="d-block w-100 d-img" alt="slider2">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
-                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
+                <h1 class="display-1 fw-bolder text-uppercase s-title">Cuidados Felinos</h1>
+                <p class="mt-3  text-uppercase s-texto">Tu Guía para un Gato Saludable</p>
             </div>
         </div>
         <div class="carousel-item  d-item">
             <img src="assets/img/gato-comida.jpg" class="d-block w-100 d-img" alt="slider3">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
-                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
+                <h1 class="display-1 fw-bolder text-uppercase s-title">Cuidados Felinos</h1>
+                <p class="mt-3  text-uppercase s-texto">Tu Guía para un Gato Saludable</p>
             </div>
         </div>
     </div>
@@ -84,7 +83,6 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-
 <!-- CUIDADOS -->
 <section class="cuidados-main">
   <div class="container-fluid">
@@ -92,7 +90,7 @@
          <div class="col-xl-6 col-md-12">
             <h1>Socialización temprana</h1>
              <hr>
-                <p class="txt-c">La socialización temprana en gatos es un proceso crucial que tiene un impacto significativo en el desarrollo de su personalidad, comportamiento y bienestar a lo largo de su vida. </p>
+                <p class="txt-c2">La socialización temprana en gatos es un proceso crucial que tiene un impacto significativo en el desarrollo de su personalidad, comportamiento y bienestar a lo largo de su vida. </p>
              <div class="imagen-texto">
                 <img src="assets/img/gato-socia.jpg" alt="" class="img-cuidados">
                  <ul class="circle-list txt-derecha custom-list">
@@ -106,7 +104,7 @@
          <div class="col-xl-6 col-md-12">
                 <h1>Aburrimiento</h1>
                 <hr>
-                <p class="txt-c ">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. </p>
+                <p class="txt-c2">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. </p>
                 <div class="imagen-texto">
                     <img src="assets/img/gato-aburrido.jpg" alt="" class="img-cuidados">
                     <ul class="circle-list txt-derecha custom-list">
@@ -124,7 +122,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Manejo del estrés</h1>
               <hr>
-              <p class="txt-c">El manejo del estrés en gatos es esencial para garantizar su bienestar emocional y físico. Los gatos son criaturas sensibles y pueden experimentar estrés debido a una variedad de situaciones y factores.</p>
+              <p class="txt-c2">El manejo del estrés en gatos es esencial para garantizar su bienestar emocional y físico. Los gatos son criaturas sensibles y pueden experimentar estrés debido a una variedad de situaciones y factores.</p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-estres.jpeg" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
@@ -140,7 +138,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Nutrición y control de peso</h1>
               <hr>
-              <p class="txt-c ">La nutrición y el control de peso son esenciales para la salud y la longevidad de tu gato. Mantener una dieta equilibrada y controlar el peso de manera adecuada son responsabilidades fundamentales como dueño de un gato.</p>
+              <p class="txt-c2">La nutrición y el control de peso son esenciales para la salud y la longevidad de tu gato. Mantener una dieta equilibrada y controlar el peso de manera adecuada son responsabilidades fundamentales como dueño de un gato.</p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-nutri.jpg" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
@@ -157,7 +155,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Vacunación y desparacitación</h1>
               <hr>
-              <p class="txt-c">La vacunación y la desparasitación son medidas cruciales para prevenir enfermedades y proteger la salud de tu gato. Estas prácticas no solo benefician a tu mascota, sino que también ayudan a prevenir la propagación de enfermedades zoonóticas y a mantener un entorno más saludable para tu familia y otros animales. </p>
+              <p class="txt-c2">La vacunación y la desparasitación son medidas cruciales para prevenir enfermedades y proteger la salud de tu gato. Estas prácticas no solo benefician a tu mascota, sino que también ayudan a prevenir la propagación de enfermedades zoonóticas y a mantener un entorno más saludable para tu familia y otros animales. </p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-vacuna.jpeg" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
@@ -172,7 +170,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Higiene</h1>
               <hr>
-              <p class="txt-c ">La falta de atención a la higiene del pelo y el arenero de tu gato puede conllevar a una serie de problemas que afectan tanto a la salud del felino como a la armonía en tu hogar. </p>
+              <p class="txt-c2">La falta de atención a la higiene del pelo y el arenero de tu gato puede conllevar a una serie de problemas que afectan tanto a la salud del felino como a la armonía en tu hogar. </p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-cepillo.webp" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
@@ -189,7 +187,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Atención y acompañamiento</h1>
               <hr>
-              <p class="txt-c">Los gatos, a pesar de su fama de independientes, requieren vínculos emocionales y estimulación mental para mantener su salud mental y emocional. La ausencia de estos cuidados puede conducir a problemas de comportamiento, obesidad, estrés y otros trastornos que afectan su calidad de vida.</p>
+              <p class="txt-c2">Los gatos, a pesar de su fama de independientes, requieren vínculos emocionales y estimulación mental para mantener su salud mental y emocional. La ausencia de estos cuidados puede conducir a problemas de comportamiento, obesidad, estrés y otros trastornos que afectan su calidad de vida.</p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-caricia.jpg" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
@@ -204,7 +202,7 @@
           <div class="col-xl-6 col-md-12">
               <h1>Diagnóstico y tratamientos</h1>
               <hr>
-              <p class="txt-c ">Si tu gato muestra signos de enfermedad, como cambios en el apetito, la actividad o el comportamiento, es importante llevarlo al veterinario de inmediato.</p>
+              <p class="txt-c2">Si tu gato muestra signos de enfermedad, como cambios en el apetito, la actividad o el comportamiento, es importante llevarlo al veterinario de inmediato.</p>
               <div class="imagen-texto">
                   <img src="assets/img/gato-medico.jpg" alt="" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
