--- a/datos.html
+++ b/datos.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -14,10 +16,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
                     <div class="col-2">
                         <a class="navbar-brand" href="#">
-                            <img src="assets/img/black-cat.jpg" width="50" alt="logo-pagina">
+                            <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                         </a>
                     </div>
                     <div class="col-8">
@@ -37,14 +38,141 @@
                         </ul>
                     </div>
                     <div class="col-2"></div>
-
                 </div>
             </div>
         </nav>
     </header>
 </head>
 <body>
+<!-- TITULO DATOS -->
+<section class="titulo-datos">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <h1 class="bienvenida-d text-uppercase fw-bold">Secretos Peludos</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <h2 class="bienvenida-d2 text-uppercase fw-bolder">Datos Curiosos sobre Nuestros Amigos Gatos</h2>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- DATOS -->
+<section class="datos-main">
+    <div class="container">
+        <!-- PRIMER ROW -->
+        <div class="row">
+            <div class="col-4 ">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-olfato.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los gatos tienen un sentido del olfato increíblemente agudo y pueden detectar olores que son imperceptibles para los humanos. Esto les permite encontrar comida y rastrear a otros animales.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 ">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-colmillos.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los gatos tienen dientes afilados y pueden tener hasta 30 dientes en su boca. Sus colmillos son particularmente afilados y se utilizan para desgarrar la carne.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 ">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-bigotes.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los bigotes de un gato son muy sensibles y están llenos de terminaciones nerviosas. Utilizan sus bigotes para medir espacios y determinar si pueden pasar por un lugar estrecho sin quedar atrapados.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- SEGUNDO ROW -->
+        <div class="row mt-5">
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-batman.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos"> Los gatos son animales crepusculares, lo que significa que son más activos durante el amanecer y el atardecer. Tienen una visión nocturna excepcional gracias a una mayor cantidad de células sensibles a la luz en sus ojos.</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-caza.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los gatos domésticos conservan sus instintos de caza, y pueden cazar una variedad de presas, desde insectos hasta pequeños roedores. Este comportamiento es parte de su naturaleza cazadora.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-limpio.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos"> Los gatos pasan una gran cantidad de tiempo acicalándose. Esto no solo los mantiene limpios, sino que también les ayuda a regular su temperatura corporal y a mantener sus músculos y articulaciones en buen estado.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- TERCER ROW -->
+        <div class="row mt-5">
+            <div class="col-4 mt-3">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-pelaje.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Cada gato tiene un patrón de pelaje único, al igual que las huellas dactilares en los humanos. No hay dos gatos con el mismo patrón de manchas o rayas.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-grito.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los gatos utilizan una variedad de sonidos para comunicarse con los humanos y otros gatos. Los maullidos, ronroneos, gruñidos y bufidos son solo algunos ejemplos de cómo expresan sus necesidades y emociones.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-cola.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">La cola de un gato es una parte importante de su sistema de comunicación. Una cola erguida generalmente indica que un gato está contento, mientras que una cola erizada puede significar que está asustado o enojado.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- CUARTO ROW -->
+        <div class="row mt-5">
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-durma.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos"> Aunque los ronquidos son más comunes en los perros, algunos gatos también pueden roncar. Esto suele ocurrir cuando están profundamente dormidos.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 23rem;">
+                    <img src="assets/img/gato-pata.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Las almohadillas de las patas de un gato son como huellas dactilares. Cada gato tiene un patrón de almohadillas único que se puede utilizar para identificarlo de manera similar a cómo usamos las huellas dactilares en humanos.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card"  style="width: 23rem;">
+                    <img src="assets/img/gato-lengua.jpg" class="card-img-top img-dato" alt="...">
+                    <div class="card-body">
+                        <p class="card-text txt-datos">Los gatos tienen papilas gustativas especiales en su lengua llamadas "papilas gustativas filiformes" que les ayudan a raspar la carne de los huesos y desgarrar la carne con eficacia.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- SECCIÓN FOOTER -->
 <section class="final">
     <div class="container-fluid">
@@ -53,12 +181,18 @@
                 <div class="d-flex justify-content-center justify-content-md-center">
                     <img src="assets/img/gato-icon.png" width="140" alt="logo-footer" class="logo-f">
                 </div>
-                <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon Coyopae (2023)©</p>
+                <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon  (2023)©</p>
             </div>
-            <div class="col-xl-4 col-md-12 ">
+            <div class="col-xl-4 col-md-12">
                 <h1 class="contacto">CONTACTOS</h1>
-                <p class="cf-txt"><img src="assets/img/email-icon.png" alt="" class="cf-icon">baironcoyopae16@gmail.com</p>
-                <p class="cf-txt"><img src="assets/img/wsp-icon.png" alt="" class="cf-icon">+56 9 3623 7250</p>
+                <div class="img-foo">
+                    <img src="assets/img/email-icon.png" alt="Icono EMail" width="30px">
+                    <p class="txt-foo">baironcoyopae16@gmail.com</p>
+                </div>
+                <div class="img-foo">
+                    <img src="assets/img/wsp-icon.png" alt="Icono Wsp" width="30px">
+                    <p class="txt-foo">+56 9 0000 0000</p>
+                </div>
             </div>
             <div class="col-xl-4 col-md-12 f-icons">
                 <h1 class="title">SÍGUENOS</h1>
@@ -71,7 +205,6 @@
         </div>
     </div>
 </section>
-
 <!--JAVASCRIPT BOOTSTRAP -->
 <script src="assets/js/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
