--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>GATOS</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
 <header>
     <nav class="navbar navbar-expand-lg">
@@ -51,10 +52,10 @@
 <section class="presentacion">
  <div class="container-fluid">
      <div class="row">
-         <div class="col-xl-6 ">
+         <div class="col-xl-6 col-xxl-6">
              <img src="assets/img/gato-rubio.png" class="imagen-p" alt="Imágen Presentación">
          </div>
-         <div class="col-xl-6 col-md-12 ">
+         <div class="col-xl-6 col-xxl-6">
              <h1 class="titulo-p">Te damos la bienvenida a nuestra organización dedicada a los felinos</h1>
              <p class="texto-p">Nuestra meta es educar sobre el cuidado de nuestras queridas mascotas felinas, proporcionando conocimiento para comprender mejor sus necesidades y brindarles una vida feliz y saludable a nuestros adorados compañeros peludos.</p>
          </div>
@@ -69,8 +70,7 @@
         <h1 class="d-flex justify-content-center">PARA TUS FELINOS</h1>
         <div class="row align-items-center justify-content-center color1">
             <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-vete.jpg" alt="" class="align-items-center justify-content-center" >
-
+                <img src="assets/img/gato-vete.jpg" alt="Imágen Cuidados 1" class="align-items-center justify-content-center" >
             </div>
             <div class="col-xl-6 col-md-12">
                 <p class="txt-c d-flex">Las revisiones veterinarias periódicas permiten detectar problemas de salud en sus primeras etapas. Esto incluye el monitoreo de la presión arterial, la salud dental y otras condiciones médicas como la diabetes o la enfermedad renal crónica.</p>
@@ -80,7 +80,7 @@
         </div>
         <div class="row align-items-center justify-content-center no-color">
             <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-comiendo.jpg" alt="" class="align-items-center justify-content-center" >
+                <img src="assets/img/gato-comiendo.jpg" alt="Imágen cuidados comida" class="align-items-center justify-content-center" >
 
             </div>
             <div class="col-xl-6 col-md-12">
@@ -91,7 +91,7 @@
         </div>
         <div class="row align-items-center justify-content-center color1">
             <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-comportamiento.jpg" alt="" class="align-items-center justify-content-center" >
+                <img src="assets/img/gato-comportamiento.jpg" alt="Imágen cuidados comportamiento" class="align-items-center justify-content-center" >
             </div>
             <div class="col-xl-6 col-md-12">
                 <p class="txt-c d-flex">Si tu gato experimenta cambios en su comportamiento, como letargo, agresión, ansiedad o miedos inexplicables, es importante consultar a un veterinario para descartar problemas de salud subyacentes.</p>
@@ -101,7 +101,7 @@
         </div>
         <div class="row align-items-center justify-content-center no-color">
             <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-rascador.jpg" alt="" class="align-items-center justify-content-center" >
+                <img src="assets/img/gato-rascador.jpg" alt="Imágen cuidados rascador" class="align-items-center justify-content-center" >
 
             </div>
             <div class="col-xl-6 col-md-12">
@@ -118,32 +118,32 @@
         <h1 class="d-flex justify-content-center t2-razas">SUS RAZAS</h1>
         <div class="row">
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
-                <img src="assets/img/gato-maine-coon.jpg" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-maine-coon.jpg" alt="Imágen razas MaineCoon" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center ">Maine-Coon</h2>
             </div>
 
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
-                <img src="assets/img/gato-siames.jpg" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-siames.jpg" alt="Imágen Siames" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center ">Siames</h2>
             </div>
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
-                <img src="assets/img/gato-persa.webp" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-persa.webp" alt="Imágen Persa" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Persa</h2>
             </div>
 
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
-                <img src="assets/img/gato-bengali.jpg" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-bengali.jpg" alt="Imágen Bengali" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Bengali</h2>
             </div>
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
 
-                <img src="assets/img/gato-azul-ruso.webp" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-azul-ruso.webp" alt="Imágen AzulRuso" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Azul Ruso</h2>
 
             </div>
             <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
 
-                <img src="assets/img/gato-siberiano.jpg" alt="" class="img-fluid d-block mx-auto">
+                <img src="assets/img/gato-siberiano.jpg" alt="Imágen Siberiano" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Siberiano</h2>
         </div>
         </div>
@@ -155,37 +155,36 @@
         <h1 class="d-flex justify-content-center d-datos">ALGUNOS DATOS CURIOSOS</h1>
         <h2 class="d-flex justify-content-center d2-datos"></h2>
         <div class="row">
-            <div class="col-xl-4 col-sm-12 espacio-d justify-content-center d-flex">
+            <div class="col-xl-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/gato-caja.webp" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-caja.webp" class="card-img-top" alt="Imágen datos caja">
                     <div class="card-body">
                         <p class="card-text">A muchos gatos les encantan las cajas. Pueden proporcionar un refugio seguro y les gustan porque retienen su calor corporal.</p>
-                        <a class="arrow-link">Saber Más<span class="arrow"></span></a>
+                        <a href="datos.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-sm-12 espacio-d justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/gato-durmiendo" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-durmiendo" class="card-img-top" alt="Imágen datos durmiendo">
                     <div class="card-body">
                         <p class="card-text">Los gatos son famosos por su amor por dormir. En promedio, un gato duerme entre 12 y 16 horas al día, aunque algunos pueden dormir incluso más.</p>
-                        <a class="arrow-link">Saber Más<span class="arrow"></span></a>
+                        <a href="datos.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-sm-12 espacio-d justify-content-center d-flex">
+            <div class="col-xl-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/gato-salto.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-salto.jpg" class="card-img-top" alt="Imágen datos salto">
                     <div class="card-body">
                         <p class="card-text">Los gatos son conocidos por su capacidad para saltar a alturas sorprendentes. Pueden saltar hasta seis veces su longitud corporal en un solo salto.</p>
-                        <a class="arrow-link">Saber Más<span class="arrow"></span></a>
+                        <a href="datos.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
     </div>
 </section>
-
 <!-- SECCIÓN FOOTER -->
 <section class="final">
     <div class="container-fluid">
@@ -199,11 +198,11 @@
         <div class="col-xl-4 col-md-12">
             <h1 class="contacto">CONTACTOS</h1>
             <div class="img-foo">
-                <img src="assets/img/email-icon.png" alt="" width="30px">
+                <img src="assets/img/email-icon.png" alt="Icono EMail" width="30px">
                     <p class="txt-foo">baironcoyopae16@gmail.com</p>
             </div>
             <div class="img-foo">
-                <img src="assets/img/wsp-icon.png" alt="" width="30px">
+                <img src="assets/img/wsp-icon.png" alt="Icono Wsp" width="30px">
                 <p class="txt-foo">+56 9 0000 0000</p>
             </div>
         </div>
